@@ -1,5 +1,9 @@
 2007-06-01  Ulrich Weigand  <uweigand@de.ibm.com>
 
+	* irix5-nat.c (JB_ELEMENT_SIZE, get_longjmp_target): Remove.
+
+2007-06-01  Ulrich Weigand  <uweigand@de.ibm.com>
+
 	* ppc-linux-tdep.c (INSTR_SC, INSTR_LI_R0_0x6666, INSTR_LI_R0_0x7777,
 	INSTR_LI_R0_NR_sigreturn, INSTR_LI_R0_NR_rt_sigreturn): Remove.
 	(PPC_LINUX_SIGNAL_FRAMESIZE, PPC_LINUX_REGS_PTR_OFFSET,
